# pyruff

./: .gitignore  Cargo.toml  LICENSE  README.md  UPGRADE_RUFF.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: check.md  config.md  format.md  getting-started.md  rules.md
python/pyruff/: __init__.py  _check.py  _format.py  _rules.py  _types.py  exceptions.py
python/ruff/: __init__.py  _check.py  _format.py  _native.pyi  _rules.py  exceptions.py
src/: check.rs  config.rs  errors.rs  format.rs  lib.rs  rules.rs
tests/: conftest.py  test_check.py  test_config.py  test_exceptions.py  test_format.py  test_rules.py
