[project]
name = "pyruff"
version = "0.15.1rc3"
description = "Native Python API for Ruff linter and formatter"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "Emil Temirov", email = "emil.temirov@gmail.com" },
]
readme = "README.md"
keywords = ["ruff", "linter", "formatter", "python"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]

[project.urls]
Homepage = "https://github.com/emilt27/pyruff"
Repository = "https://github.com/emilt27/pyruff"
Issues = "https://github.com/emilt27/pyruff/issues"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "ruff._native"
